# parallax

./: .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: cicd.yml  tests.yml
api/: Cargo.toml  build.rs
api/proto/parallax/config/resource/v1/: resource.proto
api/proto/parallax/service/catalog/v1/: catalog.proto
api/proto/parallax/service/job/v1/: job.proto
api/proto/parallax/service/resource/v1/: resource.proto
api/proto/parallax/type/error/v1/: error.proto
api/src/: lib.rs
api/src/client/: auth.rs  mod.rs
api/src/proto/: mod.rs
api/src/proto/impls/: error.rs  job.rs  mod.rs  resource.rs
api/test/: manifest.yaml
bigquery-storage/: Cargo.toml  README.md  build.rs
bigquery-storage/src/: client.rs  lib.rs  proto.rs
cli/: Cargo.toml
cli/src/: config.rs  init.rs  main.rs
cli/src/catalog/: mod.rs
cli/src/gov/: mod.rs
cli/src/job/: mod.rs
cli/test/: manifest.yaml
docker/: Dockerfile.build  Dockerfile.complete  Dockerfile.minimal  entrypoint.sh  supervisord.conf
example/manifest/: london_bicycles.yaml
worker/: Cargo.toml  build.rs
worker/src/: common.rs  main.rs  utils.rs
worker/src/backends/: big_query.rs  mod.rs
worker/src/backends/bigquery/: mod.rs  probe.rs
worker/src/gcp/: bigquery.rs  errors.rs  mod.rs  oauth.rs
worker/src/job/: mod.rs  processor.rs
worker/src/node/: backends.rs  cluster.rs  mod.rs  ops.rs  resource.rs  state.rs
worker/src/node/access/: account.rs  bootstrap.rs  mod.rs
worker/src/opt/: ansatz.rs  error.rs  expr.rs  meta.rs  mod.rs  plan.rs  rel.rs  transform.rs  validate.rs
worker/src/opt/privacy/: mod.rs
worker/src/rpc/: catalog.rs  job.rs  mod.rs  resource.rs
worker/test/: manifest.yaml  private_key.der  test.crt  test.key
