[package]
name = "parallax-api"
version = "0.2.0"
authors = ["Parallax Contributors <parallax@openquery.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "client" ]
client = [ "biscuit", "ring", "chrono" ]

[build-dependencies]
tonic-build = "0.2.0"

[dev-dependencies]
serde_yaml = "0.8"
uuid = { version = "*", features = [ "v4" ] }

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

sha2 = "0.8.1"
digest = "0.8.1"

async-trait = "0.1.22"

http = "0.2.1"
tonic = { version = "0.2.0", features = [ "transport", "tls" ] }
prost = "0.6.1"
prost-types = "0.6.1"

derive_more = "0.99.3"

regex = "1.3.4"

swamp = { path = "../../swamp/swamp" }

jac = { path = "../../jac", features = [ "redis-backend" ] }

redis = { version = "0.15.1" } 

num-traits = "0.2.11"
num-derive = "0.3.0"

biscuit = { version = "0.4.2", optional = true }
ring = { version = "0.16.9", optional = true }
chrono = { version = "0.4.10", optional = true }
