[package]
name = "parallax"
version = "0.1.0"
description = "a command line tool to interface with a Parallax deployment"
authors = ["Parallax Contributors <parallax@openquery.io>"]
edition = "2018"

[dependencies]
structopt = "0.3.13"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
toml = "0.5.6"

regex = "1.3.4"
derive_more = "0.99.0"

tonic = { version = "0.2.0", features = [ "transport", "tls" ] }
futures = "0.3.4"

tokio = { version = "0.2.13", features = [ "full" ] }
tokio-rustls = { version = "0.13" }

# for the DenyAndLog impl of ServerCertVerifier
# rustls = { version = "0.17.0", features = [ "dangerous_configuration" ] }
# webpki = "0.21.2"

colored = "1.9.3"
prettytable-rs = "0.8.0"

arrow = "0.16.0"

chrono = { version = "0.4.11", features = ["serde"] }

ring = "*"

anyhow = "*"
shellexpand = "*"

dialoguer = "0.5.0"

base64 = "0.12.0"
csv = "1.1"  # the for Arrow -> Csv -> String display

parallax-api = { path = "../api" }

walkdir = "2.3.1"