[package]
name = "parallax-worker"
version = "0.1.0"
authors = ["Parallax Contributors <parallax@openquery.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["google-bigquery"]
google-bigquery = ["gcp", "google-bigquery2", "hyper", "hyper-tls", "yup-oauth2", "http", "hyper-legacy", "bigquery-storage"]
gcp = []
monitoring = ["sentry"]

[build-dependencies]
tempfile = "3.1.0"

[dev-dependencies]
reqwest = "0.10.4"
rand = "0.3"
num-bigint = "0.2"

[dependencies]
serde = { version = "1.0", features = [ "derive", "rc" ] }
serde_yaml = "0.8"
serde_json = "1.0"

regex = "1.3.4"
base64 = "0.11.0"

uuid = { version = "0.7.4", features = [ "v4" ] }
derive_more = "0.99"
partial-min-max = "0.3.0"

tonic = { version = "0.2.0", features = [ "transport", "tls" ] }

clap = { git = "https://github.com/clap-rs/clap.git", features = [ "derive" ] }

lazy_static = "1.4.0"

log = "0.4"
env_logger = "0.6.2"

openssl = "0.10.28"

# monitoring
sentry = { version = "0.17.0", optional = true }

config = "0.9"

# gcp support
yup-oauth2 = { version = "3.1.1", optional = true }
google-bigquery2 = { version = "1.0.10", optional = true }
http = { version = "0.2", optional = true }
hyper-legacy = { package = "hyper", version = "0.12.27", optional = true }
hyper = { version = "0.13.2", optional = true}
hyper-tls = { version = "0.4.1", optional = true }

bigquery-storage = { path = "../../bigquery-storage", optional = true }

# for the probe
tide = "0.5.1"

# for the cache
redis = "0.15.1"

# compat required for tokio_signal and redis 
futures = { version = "0.3.0", features = [ "compat" ] }
futures_01 = { package = "futures", version = "=0.1.29" }

tokio = { version = "0.2.6", features = [ "full" ] }
tokio-signal = { version = "0.2.6" }
tokio_legacy = { package = "tokio", version = "0.1" }

# required to try inferring advertised_host if not specified through env/cli
ifaces = "0.1.0"

# JWT
biscuit = "0.4.1"
ring = "0.16.11"

#async methods
async-trait = "0.1.19"
async-stream = "0.2.1"

#Serde time
chrono = { version = "0.4", features = ["serde"] }

sqlparser = "*"

entish = { path = "../../entish/entish" }

jac = { path = "../../jac", features = [ "redis-backend" ] }

parallax-api = { path = "../api" }

Inflector = "0.11.4"
